# rt-render-debuger-cpp

./: .clang-format  .gitignore  Assimp.drawio  CMakeLists.txt  README.md  config.h.in  main.cpp  render.drawio  table-node.sql  table-path.sql  多线程task.drawio  未命名绘图.drawio  路径的数据结构.drawio
debugger/: CMakeLists.txt  README.md  main.cpp
demo/: CMakeLists.txt  sql.cpp  thread.cpp
render/: CMakeLists.txt  README.md  bounding_box.h  bvh.h  intersection.h  lldb.py  main.cpp  material.h  object.h  ray.h  ray_path.h  ray_path_serialize.h  rt_render.h  scene.h  sqlite_helper.h  task.h  triangle.h  utils.h
render/src/: bounding_box.cpp  bvh.cpp  intersection.cpp  material.cpp  object.cpp  rt_render.cpp  scene.cpp  triangle.cpp
render/test/: test_bounding_box.cpp  test_bvh.cpp  test_intersect.cpp  test_mesh.cpp  test_ray_trace.cpp  test_render.cpp  test_sample.cpp  test_scene.cpp  test_sqlite.cpp  test_task.cpp
render/unit_test/: test_bounding_box.cpp
